# liams-vibe-gi

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  imgui.ini
include/: Camera.h  Entity.h  FullscreenQuad.h  LightComponent.h  Material.h  MaterialComponent.h  Mesh.h  MeshComponent.h  RadianceCascades.h  SSGI.h  Scene.h  Shader.h  ShadowMap.h  TextRenderer.h  TransformComponent.h  Window.h
scripts/: Behaviour.cpp  Behaviour.h  RotationComponent.cpp  RotationComponent.h
shaders/: blur.frag  copy.frag  final_composite.frag  fullscreen.vert  fxaa.frag  gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  rc_cascade.frag  shadow_depth.frag  ssao.frag  ssao_blur.frag  ssgi.frag  ssgi_blur.frag  ssr.frag  taa.frag  text.frag  text.vert
src/: Camera.cpp  Entity.cpp  FullscreenQuad.cpp  Material.cpp  MaterialComponent.cpp  Mesh.cpp  RadianceCascades.cpp  SSGI.cpp  Scene.cpp  Shader.cpp  ShadowMap.cpp  TextRenderer.cpp  Window.cpp  main.cpp
